[tool.poetry]
name = "geulpaeng"
version = "0.1.0"
description = ""
authors = ["nayoung <nayoung.tech@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.3"
dependency-injector = "^4.42.0"
zappa = "^0.59.0"
slack-sdk = "^3.33.1"
requests = "^2.32.3"
gspread = "^6.1.4"
typer = "^0.13.1"
pendulum = "^3.0.0"
python-dotenv = "^1.0.1"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.1"
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
